# multirobot-racing-env

./: README.md
sarl_star_ros/: package.xml
sarl_star_ros/CrowdNav-crosspath/crowd_nav/: plotting2.py  test.py  train.py
sarl_star_ros/CrowdNav-crosspath/crowdnav.egg-info/: PKG-INFO  SOURCES.txt
sarl_star_ros/CrowdNav-nowall/crowd_nav/: test.py  train.py
sarl_star_ros/CrowdNav-nowall/crowdnav.egg-info/: SOURCES.txt
sarl_star_ros/CrowdNav/crowd_nav/: plot.py  plotting (copy).py  plotting.py  plotting2.py  rectangle_obstacles.txt  test.py  (+2 more)
sarl_star_ros/launch/: my_world.launch  sarl_star_navigation.launch  sarl_star_turtlebot3_columns_world.launch  sarl_star_turtlebot3_empty_world.launch  sarl_star_turtlebot3_people.launch  sarl_star_turtlebot3_sarl_world.launch  sarl_star_turtlebot3_world.launch  turtlebot3_gazebo.launch  turtlebot3_gazebo1.launch.xml  turtlebot3_sarl_star_world.launch  turtlebot3_sarl_star_world_track.launch  turtlebot3_sarl_star_world_track_multi.launch  turtlebot3_sarl_star_world_track_multi1.launch.xml
sarl_star_ros/map/: columns_map.pgm  columns_map.yaml  empty_map.pgm  final.pgm  final.yaml  map.pgm  map_pedsim11.pgm  map_pedsim11.yaml  pista.yaml  sarl_map.pgm  sarl_map.yaml  turtlebot3_map.pgm  turtlebot3_map.yaml
sarl_star_ros/rviz/: sarl_crowd_nav.rviz  sarl_crowd_nav_multi.rviz  traditional.rviz
sarl_star_ros/scripts/: plot_reward_node.py  sarl_original_node.py  sarl_star_node.py  sarl_star_node1.py  sarl_star_node2.py  sarl_star_node3.py
sarl_star_ros/worlds/: centered_track.world  columns_world.world  people.world  pista_world.world  sarl_world.world  track_world.world
(+291 files in other folders)
